2001-07-16  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	(scm_char_set_map): Bug-fix: char-set-map was modifying the
	argument instead of the return value.

2001-07-16  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* srfi-14.c: Allocate correct memory size for charsets (32 bytes),
	use this value for initializing and comparing charsets.
	(scm_char_set_hash): Use ``better'' hash algorithm which produces
	more values.

2001-07-15  Gary Houston  <ghouston@arglist.com>

	* srfi-14.c (scm_char_set_hash): recognise 0 instead of #f in the
	opt arg to give default bound, as in final spec.  don't allow
	negative bounds.
	(scm_char_set_hash): bug fix: was overrunning the buffer and
	calculating based on garbage.
	(scm_char_set_eq, scm_char_set_leq): fix argument number in error
	reporting: wasn't incremented due to macro coding.
	(scm_char_set): report argument number in error reporting: was
	hard coded to 1.  remove a couple of local variables.

2001-07-13  Marius Vollmer  <mvo@zagadka.ping.de>

	* srfi-2.scm (and-let*): Use `re-export-syntax' instead of
	`export-syntax'.

2001-07-11  Gary Houston  <ghouston@arglist.com>

	* srfi-14.c (s_scm_char_set_eq): bug fix: (char-set=) should
	return #t instead of giving wrong-number-of-arguments . take a
	single "rest" argument.  use memcmp instead of a loop to compare
	the values.
	(s_scm_char_set_leq): similarly, (char-set<=) should return #t.
	take a single "rest" argument.
	srfi-14.h: update the declarations.

2001-07-09  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* README: Cleanup.

2001-07-06  Gary Houston  <ghouston@arglist.com>

	* srfi-1.scm (iota, map, for-each, list-index, member, delete,
	delete!, assoc): roll back the previous change.  instead place
	dummy definitions in a deprecated block at the beginning as in
	srfi-13.scm.
	
2001-07-06  Rob Browning  <rlb@defaultvalue.org>

	* srfi-19.scm (priv:locale-reader): don't need open-output-string.

2001-07-03  Gary Houston  <ghouston@arglist.com>
